--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lucide-react": "^0.469.0",
     "marked": "^15.0.6",
     "next": "15.0.3",
+    "nodemailer": "^6.10.0",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-hook-form": "^7.54.2",
@@ -32,6 +33,7 @@
   "devDependencies": {
     "@types/lodash": "^4.17.16",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-transition-group": "^4.4.12",
